# privilege-checker

./: CMakeLists.txt  README.md  main.cpp  server.bat
node_js/: index.js  package-lock.json  package.json
node_js/views/: check.ejs  info.ejs
